main: get UkUrl from config

--- a/Taxually.TechnicalTest/Taxually.TechnicalTest/appsettings.json
+++ b/Taxually.TechnicalTest/Taxually.TechnicalTest/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UkUrl": "https://api.uktax.gov.uk"
 }
